extends CanvasLayer

var name_string : String
onready var player_name = $Panel/name
var max_name = 12

func _on_A_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "A"
			player_name.text = name_string

func _on_B_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "B"
			player_name.text = name_string

func _on_C_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "C"
			player_name.text = name_string
func _on_D_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "D"
			player_name.text = name_string

func _on_E_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "E"
			player_name.text = name_string

func _on_F_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "F"
			player_name.text = name_string

func _on_G_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "G"
			player_name.text = name_string

func _on_H_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "H"
			player_name.text = name_string

func _on_I_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "I"
			player_name.text = name_string

func _on_J_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "J"
			player_name.text = name_string

func _on_K_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "K"
			player_name.text = name_string

func _on_L_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "L"
			player_name.text = name_string

func _on_M_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "M"
			player_name.text = name_string

func _on_N_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "N"
			player_name.text = name_string

func _on_O_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "O"
			player_name.text = name_string

func _on_Q_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "Q"
			player_name.text = name_string

func _on_P_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "P"
			player_name.text = name_string

func _on_R_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "R"
			player_name.text = name_string

func _on_S_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "S"
			player_name.text = name_string

func _on_T_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "T"
			player_name.text = name_string

func _on_U_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "U"
			player_name.text = name_string

func _on_V_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "V"
			player_name.text = name_string

func _on_W_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "W"
			player_name.text = name_string

func _on_X_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "X"
			player_name.text = name_string

func _on_Y_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "Y"
			player_name.text = name_string

func _on_Z_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		if name_string.length() <= max_name:
			name_string = name_string + "Z"
			player_name.text = name_string

func _on_BACKSPACE_gui_input(event):
	if event.is_action_pressed("click") || (event is InputEventScreenTouch 	and event.pressed == true):
		name_string.erase(name_string.length() - 1, 1)
		player_name.text = name_string

func _on_Submit_pressed():
	if name_string.length() == 0:
		return
	globals.player_name = player_name.text
	analytics.objective_completed("entered a name", {
		"name" : player_name.text,
		"elapsed_time": OS.get_ticks_msec()
		})
	
	global_ui.fade_out()
	globals.goto_scene("res://scenes/levels/intro.tscn")
	
